<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalculatorSimple</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblInsertNum">Ingrese un número</string>
    <string name="lblCalcular">Calcular</string>
    <string name="opSuma">Sumar</string>
    <string name="opResta">Restar</string>
    <string name="opMultiplicar">Multiplicar</string>
    <string name="opDividir">Dividir</string>
    <string name="lblChoseOp">Elija la operación a realizar</string>

</resources>
